k8s_files/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: covid-app
  labels:
    name: covid-app
